# vpce-operator

./: .gitignore  .travis-ci.yml  Dockerfile  README.md  aws.py  handlers.py  pyproject.toml  svc.yaml
configs/: kustomization.yaml
configs/crds/: vpcendpoint.yaml
configs/operator/: vpce-operator-template.yaml
configs/rbac/: vpce-operator-rbac-template.yaml
examples/: vpce-custom-generated-security-groups.yaml  vpce-generic-generated-security-group.yaml  vpce-provide-security-group.yaml
